<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/welcome_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/create_new_account"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dontHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/dontHaveAccount"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/Username"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/userName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#676767"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/e_mail"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_visibility_off_black_24dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/re_password"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/re_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/ifyoualreadyhaveaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_radius"
            android:text="@string/create"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/you_have_an_account"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/you_have_an_account"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_Text_signup"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>