<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRecord"
    android:orientation="vertical"
    >
    <include layout="@layout/toolbarwithicon"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/new_record"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/ifyoualreadyhaveaccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="67dp"
                    android:layout_weight="1"
                    android:text="@string/weight"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/border"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/plusWieght"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:text="@string/plusweight"
                        android:textColor="@color/blue"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/zeroweight"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/zeroweight"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:minHeight="48dp"

                        android:textAlignment="center"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                    <Button
                        android:id="@+id/minusWeight"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:text="@string/minus"
                        android:textColor="@color/blue"

                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

                <TextView
                    android:id="@+id/kg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/kg"
                    android:textColor="@color/blue"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Length"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="70dp"
                    android:layout_weight="1"
                    android:text="@string/length"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/border"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/plusHeight"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:text="@string/plusHeight"
                        android:textColor="@color/blue"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/zero"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/zero"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:minHeight="48dp"

                        android:textAlignment="center"
                        tools:ignore="TextContrastCheck" />

                    <Button

                        android:id="@+id/minus"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:text="@string/minus"
                        android:textColor="@color/blue"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

                <TextView

                    android:id="@+id/cm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cm"
                    android:textColor="@color/blue"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_new_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="90dp"
                    android:text="@string/datenew_record"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/date"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/dateofbirdth"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="85dp"
                    android:text="@string/time"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText

                    android:id="@+id/inputtime"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/inputtime"
                    android:importantForAutofill="no"
                    android:inputType="time"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/save_data"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_radius"
                android:text="@string/save_data"

                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>