<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <include layout="@layout/toolbar"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/welcome_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ifyoualreadyhaveaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/if_you_already_have_an_account_log_in"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/Username"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/username"

            android:textColor="#676767"
            android:textSize="14sp"
            android:importantForAutofill="no" />
        <com.google.android.material.textfield.TextInputLayout
            app:passwordToggleEnabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordinlogin"
                android:layout_width="340dp"
                android:layout_height="match_parent"
                android:ems="15"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/log_in_btn"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_radius"
            android:text="@string/log_in"
            android:textColor="#FFFFFF"
            android:textStyle="bold"

            />


        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/you_don_t_have_an_account"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/you_don_t_have_an_account"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:textColor="#0277BD"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>